//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table User {
  id String [pk]
  email String [unique, not null]
  password String [not null]
  active Boolean [not null, default: true]
  accounts Account [not null]
  sessions Session [not null]
  profile Profile
  rolePermissions RolePermission [not null]
}

Table Profile {
  id String [pk]
  firstName String [not null]
  lastName String [not null]
  user User [not null]
  userId String [unique, not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table Role {
  id String [pk]
  name String [unique, not null]
  RolePermission RolePermission [not null]
}

Table Permission {
  id String [pk]
  name String [unique, not null]
  RolePermission RolePermission [not null]
}

Table RolePermission {
  role Role [not null]
  roleId String [not null]
  permission Permission [not null]
  permissionId String [not null]
  groupId String
  User User
  userId String

  indexes {
    (roleId, permissionId) [pk]
  }
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: Profile.userId - User.id [delete: Cascade]

Ref: RolePermission.roleId > Role.id

Ref: RolePermission.permissionId > Permission.id

Ref: RolePermission.userId > User.id